force-app/main/default/objects/Stock_In__c/Stock_In__c.object-meta.xml
<CustomObject>
    <label>Stock In</label>
    <nameField>
        <displayFormat>SI-{00000}</displayFormat>
        <label>Stock In Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>