force-app/main/default/objects/Stock_In__c/fields/PO_Product__c.field-meta.xml
<CustomField>
    <fullName>PO_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PO Product</label>
    <referenceTo>PO_Product__c</referenceTo>
    <relationshipLabel>Stock In</relationshipLabel>
    <relationshipName>Stock_In</relationshipName>
    <type>Lookup</type>
</CustomField>