force-app/main/default/objects/Stock_In__c/fields/Product_Variants__c.field-meta.xml
<CustomField>
    <fullName>Product_Variants__c</fullName>
    <label>Product Variants</label>
    <referenceTo>HaravanProductVariant__c</referenceTo>
    <relationshipLabel>Stock In</relationshipLabel>
    <relationshipName>Stock_In</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>