force-app/main/default/objects/Stock_In__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Stock In</relationshipLabel>
    <relationshipName>Stock_In</relationshipName>
    <type>Lookup</type>
</CustomField>